--- a/TodoApp/src/app/template.ejs
+++ b/TodoApp/src/app/template.ejs
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="gemStore">
+<html lang="en" ng-app="app">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css" rel="stylesheet" integrity="sha384-gv0oNvwnqzF6ULI9TVsSmnULNb3zasNysvWwfT/s4l8k5I+g6oFz9dye0wg3rQ2Q"
-    crossorigin="anonymous">
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
 </head>
 
 <body>
-  <div class="container">
-    <div ng-controller="MainController as main">
-      {{main.name}}
-    </div>
+  <div class="todo" ng-controller="TodoController as todos">
+    <ul class="todo__list">
+      <li ng-repeat="todo in todos.list">
+        <input id="todo-{{$index}}" type="checkbox" ng-model="todo.completed">
+        <label class="toggle" for="todo-{{$index}}"></label>
+        <p>{{todo.title}}</p>
+      </li>
+    </ul>
   </div>
 </body>
 
